Fixed annoying shift in landing page when subheading popped in

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -122,6 +122,9 @@
     .image-container img {
       max-width: 50%; /* Optionally, limit the size on smaller screens */
     }
+    .roles {
+      font-size: 0.75rem !important;
+    }
   }
   
 
